# fortran-python-extension-example

./: README.md  pyproject.toml  setup.py
.github/workflows/: Build-MacOS.yml  Build-Ubuntu.yml  Build-Windows.yml  test.yml
src/fortext/: __init__.py
src/fortext/algo/: math.f90
