[project]
name = "fortext"
version = "0.0.1"
authors = [{ name = "Mingze Gao", email = "adrian.gao@outlook.com" }]
description = "An example of using Fortran to write Python extension"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Operating System :: OS Independent",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
]
license = { text = "MIT License" }
dependencies = ["numpy"]


[project.urls]
homepage = "https://github.com/mgao6767/fortran-python-extension-example"

[build-system]
requires = ["setuptools", "numpy"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
skip = ["pp*", "*i686"]
